...
            Text("Press return in the owner field to fetch repositories and workflows. If there are many entries only the most recently updated will be shown.\n\nSign into GitHub to access private repositories. The token you set here will be used for all GitHub pipelines.")
                .fixedSize(horizontal: false, vertical: true)
                .padding(.bottom)
            Form {
                HStack {
                    TextField("Authentication:", text: $authenticator.tokenDescription)
                        .accessibilityIdentifier("Token field")
                        .truncationMode(.tail)
                        .disabled(true)
                    if authenticator.isWaitingForToken {
                        Button("Cancel") {
                            authenticator.cancelSignIn()
                        }
                    } else {
                        Menu {
                            Button("Get OAuth token...") {
                                Task {
...
                    Button("Cancel", role: .cancel) { }
                }
                message: {
                    Text("Enter the fine-grained personal token you created on the GitHub website. The token must be a repository token and must have `Actions` and `Contents` permissions. Read-only is sufficient.")
                }
                TextField("Owner:", text: $owner.input, prompt: Text("user or organisation"))
                .accessibilityIdentifier("Owner field")
                // TODO: figure out why .prefersDefaultFocus(in:) doesn't work
                .autocorrectionDisabled(true)
                .onReceive(owner.$text) { t in
                    builder.owner = t
                    if t.isEmpty {
                        repositoryList.clearRepositories()
...

                Picker("Workflow:", selection: $workflowList.selected) {
                    ForEach(workflowList.items) { w in
                        Text(w.name).tag(w)
                    }
                }
                .accessibilityIdentifier("Workflow picker")
                .disabled(!workflowList.selected.isValid)
                .onChange(of: workflowList.selected) {
                    builder.workflow = workflowList.selected
                }

                LabeledContent("Branch:") {
...
                        }
                }
                .padding(.bottom)

                HStack {
                    TextField("Display name:", text: $builder.name)
                        .accessibilityIdentifier("Display name field")
                    Button("Reset", systemImage: "arrowshape.turn.up.backward") {
                        builder.setDefaultName()
                    }
                }
                .padding(.bottom)
            }

            HStack {
                Button("Cancel") {
                    presentation.dismiss()
                }
                .keyboardShortcut(.cancelAction)
                Button("Apply") {
                    Task {
                        if let p = await builder.makePipeline(token: authenticator.token) {
                            config.setPipeline(p)
                            presentation.dismiss()
                        }
                        // TODO: show error
...
