...
                .labelsHidden()
                .padding(.bottom, 8)
                
                Toggle(isOn: $showBuildTimesInMenu) {
                    Text("with time of last build")
                }
                .accessibilityIdentifier("Show time")
                Toggle(isOn: $showBuildLabelsInMenu) {
                    Text("with label of last build")
                }
                .accessibilityIdentifier("Show label")
                .padding(.bottom, 8)

                Toggle(isOn: $hideSuccessfulBuildsInMenu) {
                    Text("only when last build was not successful")
                }
                .accessibilityIdentifier("Hide successful builds")
                .padding(.bottom)
            }
        }
        .navigationTitle("Appearance")
        .padding()
    }

}


...
